package exceptions;

public class ExcepcionAnadirMarca extends Exception {
    public ExcepcionAnadirMarca(String mensaje) {
        super(mensaje);
    }
}
