package exceptions;

public class ExcepcionAnadirMovil extends Exception{
    public ExcepcionAnadirMovil(String mensaje) {
        super(mensaje);
    }
}
