package exceptions;

public class ExcepcionAnadirTelevisor extends Exception {
    public ExcepcionAnadirTelevisor(String mensaje) {
        super(mensaje);
    }
}
