package exceptions;

public class ExcepcionBuscarMarca extends Exception{
    public ExcepcionBuscarMarca(String mensaje){
        super(mensaje);
    }
}
