package exceptions;

public class ExcepcionBuscarMovil extends Exception {
    public ExcepcionBuscarMovil(String mensaje) {
        super(mensaje);
    }
}
