package exceptions;

public class ExcepcionBuscarTelevisor extends Exception{
    public ExcepcionBuscarTelevisor(String mensaje){
        super(mensaje);
    }
}
