package exceptions;

public class ExcepcionListarArticulos extends Exception{
    public ExcepcionListarArticulos(String mensaje){
        super(mensaje);
    }
}
