package exceptions;

public class ExcepcionListarMarcas extends Exception{
    public ExcepcionListarMarcas(String mensaje){
        super(mensaje);
    }
}
