package exceptions;

public class ExcepcionMostrarMenu extends Exception {
    public ExcepcionMostrarMenu(String mensaje) {
        super(mensaje);
    }
}
