package models;

public enum TipoPantalla {
    LED, QLED, OLED, QNED
}
