package models;

public enum TipoSistemaOperativo {
    ANDROID, IOS
}
