@startuml
' Diagrama de clases del proyecto actualizado

' Clases principales
class Menu {
  - scanner : Scanner
  - salir : boolean
  - operaciones : Operaciones
  + mostrarMenu() : void
  + anadirMarca() : void
  + anadirTelevisor() : void
  + anadirMovil() : void
  + buscarMarca() : void
  + buscarTelevisor() : void
  + buscarMovil() : void
  + listarMarcas() : void
  + listarArticulos() : void
}

interface Operaciones {
  + getListaArticulos() : ArrayList<Dispositivo>
  + getListaMarcas() : ArrayList<Marca>
  + agregarMarca(nombre : String, pais : String, facturacion : int) : void
  + agregarTelevisor(precio : double, marca : Marca, nombre : String, tipoPantalla : TipoPantalla, tamano : int) : void
  + agregarMovil(precio : double, marca : Marca, nombre : String, tipoSO : TipoSistemaOperativo, ram : int) : void
  + busquedaMarca(nombre : String, pais : String) : void
  + encontrarTelevisor(precio : double, marca : Marca, nombre : String, tipoPantalla : TipoPantalla, tamano : int) : void
  + busquedaMovil(precio : double, marca : Marca, nombre : String, tipoSO : TipoSistemaOperativo, ram : int) : void
  + mostrarMarcas() : void
  + mostrarArticulos() : void
}

class OperacionesImpl implements Operaciones {
  - listaArticulos : ArrayList<Dispositivo>
  - listaMarcas : ArrayList<Marca>
  + getListaArticulos() : ArrayList<Dispositivo>
  + getListaMarcas() : ArrayList<Marca>
  + agregarMarca(nombre : String, pais : String, facturacion : int) : void
  + agregarTelevisor(precio : double, marca : Marca, nombre : String, tipoPantalla : TipoPantalla, tamano : int) : void
  + agregarMovil(precio : double, marca : Marca, nombre : String, tipoSO : TipoSistemaOperativo, ram : int) : void
  + busquedaMarca(nombre : String, pais : String) : void
  + encontrarTelevisor(precio : double, marca : Marca, nombre : String, tipoPantalla : TipoPantalla, tamano : int) : void
  + busquedaMovil(precio : double, marca : Marca, nombre : String, tipoSO : TipoSistemaOperativo, ram : int) : void
  + mostrarMarcas() : void
  + mostrarArticulos() : void
}

' Clases de modelo
class Marca {
  - nombre : String
  - pais : String
  - facturacion : int
  + getNombre() : String
  + getPais() : String
  + getFacturacion() : int
  + equals(objeto : Object) : boolean
  + hashCode() : int
}

abstract class Dispositivo {
  - precio : double
  - marca : Marca
  - nombre : String
  + getPrecio() : double
  + getMarca() : Marca
  + getNombre() : String
  + equals(objeto : Object) : boolean
  + hashCode() : int
}

class Televisor extends Dispositivo {
  - tipoPantalla : TipoPantalla
  - tamanoPulgadas : int
  + getTipoPantalla() : TipoPantalla
  + getTamanoPulgadas() : int
  + equals(objeto : Object) : boolean
  + hashCode() : int
}

class Movil extends Dispositivo {
  - sistemaOperativo : TipoSistemaOperativo
  - tamanoRAM : int
  + getSistemaOperativo() : TipoSistemaOperativo
  + getTamanoRAM() : int
  + equals(objeto : Object) : boolean
  + hashCode() : int
}

' Enumeraciones
enum TipoPantalla {
  LED
  OLED
  QLED
  QNED
}

enum TipoSistemaOperativo {
  ANDROID
  IOS
}

' Excepciones personalizadas
class ExcepcionAnadirMarca extends Exception
class ExcepcionAnadirMovil extends Exception
class ExcepcionAnadirTelevisor extends Exception
class ExcepcionBuscarMarca extends Exception
class ExcepcionBuscarMovil extends Exception
class ExcepcionBuscarTelevisor extends Exception
class ExcepcionListarMarcas extends Exception
class ExcepcionListarArticulos extends Exception
class ExcepcionMostrarMenu extends Exception

' Relaciones
Menu --> Operaciones
OperacionesImpl o-- Dispositivo
OperacionesImpl o-- Marca
Televisor --> TipoPantalla
Movil --> TipoSistemaOperativo
@enduml